# food_accept_single

./: .gitignore  Cargo.toml  api_result.txt  backup_20260722_161916.db  backup_20260722_172854.db  backup_20260722_181049.db  cleanup.cs  cleanup.py  food_accept_v3.db  food_accept_v3.db-shm  food_accept_v3.db-wal  result.txt
.trae/rules/: git-commit-message.md
backups/: backup_20260721_220332.db  backup_20260723_125037.db  backup_before_clean_20260723_150119.db  backup_before_clean_20260723_150139.db  backup_before_clean_20260723_150235.db  backup_before_clean_20260723_150829.db
src/: main.rs
temp_backups/: backup_20260722_171817.db
