[package]
name = "food_accept_single"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "food_accept_single"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
sqlx = { version = "0.9", features = ["sqlite", "runtime-tokio", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
rand = "0.8"
bytes = "1"
rust_xlsxwriter = "0.81"
calamine = "0.36"
tray-icon = "0.24.1"
tao = "0.35.3"
multer = "2"
mime = "0.3"
bcrypt = "0.15"
